fix(VChip): Truncate text if the chip is shorter.
Adds truncation to chip text if the chip is shorter than the text size.
Adds title tag including entire chip text.

fixes #5584

--- a/packages/vuetify/src/components/VChip/VChip.sass
+++ b/packages/vuetify/src/components/VChip/VChip.sass
@@ -110,6 +110,11 @@
     height: 100%
     max-width: 100%
 
+  .v-chip__content__content
+    flex: 0 1 auto
+    overflow: hidden
+    text-overflow: ellipsis
+
 // Modifiers
 .v-chip--active
   .v-icon
